app/styles/scss/style.scss
$font-stack: 'Open Sans', sans-serif;
$primary-color: #141414;
$secondary-color: #2b2b2b;
$primary-text-color: #fff;
$link-color: #a1a1a1;
$link-hover-color:#fff;
$menubar-link-hover-color: #111;
$button-press-color:#474747;

html, body, div, span, applet, object, iframe,
h1, h2, h3, h4, h5, h6, p, blockquote, pre,
a, abbr, acronym, address, big, cite, code,
del, dfn, em, img, ins, kbd, q, s, samp,
small, strike, strong, sub, sup, tt, var,
b, u, i, center,
dl, dt, dd, ol, ul, li,
fieldset, form, label, legend,
table, caption, tbody, tfoot, thead, tr, th, td,
article, aside, canvas, details, embed, 
figure, figcaption, footer, header, hgroup, 
menu, nav, output, ruby, section, summary,
time, mark, audio, video {
	margin: 0;
	padding: 0;
	border: 0;
	font-size: 100%;
	font: inherit;
	vertical-align: baseline;
	font-family: $font-stack
}

/* HTML5 display-role reset for older browsers */
article, aside, details, figcaption, figure, 
footer, header, hgroup, menu, nav, section {
	display: block;
}

body {
	line-height: 1;
	background-color: $primary-color;
	overflow-y:scroll;
}

ol, ul {
	list-style: none;
}

blockquote, q {
	quotes: none;
}

blockquote:before, blockquote:after,
q:before, q:after {
	content: '';
	content: none;
}

table {
	border-collapse: collapse;
	border-spacing: 0;
}

.copyright{
	font-size:0.7em;
	color: $primary-text-color;
	text-align:center;
	padding: 10px;
}

/*-----------Header/Banner-----------*/
.mainContainer {
	width: 75%;
	margin-left: auto;
	margin-right: auto;
}

header {
	position: relative;
	margin-left: 1px;
	margin-right: 2px;
	.banner {
		max-width: 100%;
		position: relative;
		
	}
	.artistBlock {
		position: absolute;
		bottom: 5%;
		z-index: 1;
		color: $primary-text-color;
		width: 100%;

		.artistImg {
			position: relative;
			width: 100px;
			left: 50%;
			margin-left: -50px;	
		}
		h1{		
				font-size: 2em;
				font-weight: bold;
				text-align: center;
		}
		h3{
			font-size: 1em;
			text-align: center;
			font-weight: 400;		
		}
	}
}

.menubar {
	text-align: center;
	background-color: $secondary-color;
	margin-left: 1px;
	margin-right: 2px;
	
	ul {
		background-color: $secondary-color;
		text-align: center;
		position: relative;
		display:inline-block;		
		font-size: 1em;
		line-height: 20px;
  		vertical-align: middle;
				
		li {
			float: left;

			a {
				display: block;
				color: $primary-text-color;
				text-decoration:none;
				text-align: center;
				padding: 14px 16px;
			}
			a:hover {
				background-color: $primary-color;
			}
		}
	}
}

.gallery {
	width: 100%;
	margin: auto;
	text-align: center;

	.imageList {

		.image{
			width: calc(16.66666666% - 4px);
			padding:2px;
			display: inline-block
		}
	}
}

.image-view{
	position: relative;
	margin-left: 1px;
	margin-right: 2px;

	img{
		max-width: 100%;
		width: 100%;
		position: relative;
		overflow: hidden;
	}

	button {
		background-color: $primary-color;
		color:$primary-text-color;
		padding: 2px;
		margin: 2px;
		border: 0;
		text-align: center;
		text-decoration: none;
		display: block;
		font-size: 14px;
		-webkit-transition-duration: 0.4s; /* Safari */
		transition-duration: 0.4s;
		cursor: pointer;
	}
		
	button:hover {
		background-color: #fff;
		color: black;
	}

	.back-button{
		float:right;
	}
}


.clearfix:after {
     visibility: hidden;
     display: block;
     font-size: 0;
     content: " ";
     clear: both;
     height: 0;
     }

.clearfix { display: inline-block; }

* html .clearfix { height: 1%; }
.clearfix { display: block; }

.clearLeft{
    clear: left;
}

.About {
	color: $primary-text-color;
	line-height: 2em;
	letter-spacing: 0.5px;
	max-width: 700px;
	margin-left: auto;
	margin-right: auto;
	
	h1{		
		font-size: 1.5em;
		font-weight: bold;
		text-align: center;
		padding-bottom: 10px;
		padding-top:50px;
	}

	h2{
		font-size: 1.2em;
		font-weight: bold;
		text-align: center;
		padding-bottom: 10px;
		padding-top:20px;
	}

	p{
		font-size: 0.95em;
		text-align: center;
		text-decoration: none;
		padding-bottom: 20px;
	}	

	.center {
		text-align: center;
	}

	ul{
		text-align: center;
		text-decoration: none;
		padding-bottom: 10px;
	}

	a{
		text-decoration:none;
		color: $link-color;
	}

	a:hover {
		color: $link-hover-color;
	}

	.line{
		margin-left: auto;
		margin-right: auto;
		margin-top: 20px;
		margin-bottom: 20px;
		width: 30%;
		border-bottom: 1px solid rgba(#fff,0.50)
	}
}

.Admin {
	color: $primary-text-color;
	line-height: 2em;
	letter-spacing: 0.5px;
	max-width: 700px;
	margin-left: auto;
	margin-right: auto;
	text-align: center;
	
	h1{		
		font-size: 1.5em;
		font-weight: bold;
		text-align: center;
		padding-bottom: 30px;
		padding-top:30px;
	}

	p{
		font-size: 0.95em;
		text-align: center;
		text-decoration: none;
		padding-top: 10px;
	}	

	.center {
		text-align: center;
	}

	input {
		margin-bottom:20px;
	}

	button {
		border: none;
		background: $secondary-color;
		color: white;
		padding: 10px;
		margin:auto; 
		display:block;
	}

	button:hover{
		border: none;
		background:$button-press-color;
		color: white;
		padding:10px;
	}
}

@media screen and (max-width: 1400px){
	.mainContainer {
		width: 80%;	
	}
}

@media screen and (max-width: 1300px){
	.mainContainer {
		width: 85%;	
	}
}

@media screen and (max-width: 1200px){
	.mainContainer {
		width: 100%;	
	}
}

@media screen and (max-width: 1000px){
	.mainContainer {
		width: 100%;	
	}

	.gallery {
		.imageList {
			.image{
				width: calc(25% - 4px);
				padding:2px;
			}
		}
	}
}

@media screen and (max-width: 800px){
	.artistBlock {
		height: 40px;
		display:block;
		padding-top:5px;
		position: relative !important;}
	.artistImg {display:none;}
	.banner {display:none;}
	h3 {display:none;}	
	.About {
		padding-left: 5%;
		padding-right: 5%;
	}
}

@media screen and (max-width: 600px){
	.mainContainer {
		width: 100%;	
	}

	.gallery {
		.imageList {
			.image{
				width: calc(50% - 4px);
				padding:2px;
			}
		}
	}
}

